feat: upgrade to Java 21 and integrate Swagger/OpenAPI documentation